edit & delete post added

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,10 +25,10 @@
                     <a class="nav-link text-uppercase px-3" href="{% url 'add_author' %}">Add Author</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-uppercase px-3" href="#">Add Category</a>
+                    <a class="nav-link text-uppercase px-3" href="{% url 'add_category' %}">Add Category</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-uppercase px-3" href="#">Add Post</a>
+                    <a class="nav-link text-uppercase px-3" href="{% url 'add_post' %}">Add Post</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
